[workspace]
members = [
  "crates/omena-abstract-value",
  "crates/engine-input-producers",
  "crates/omena-interner",
  "crates/omena-syntax",
  "crates/omena-parser",
  "crates/omena-incremental",
  "crates/omena-cascade",
  "crates/omena-resolver",
  "crates/omena-semantic",
  "crates/omena-bridge",
  "crates/omena-transform-cst",
  "crates/omena-transform-passes",
  "crates/omena-transform-bundle",
  "crates/omena-transform-target",
  "crates/omena-transform-print",
  "crates/omena-transform-egg",
  "crates/omena-query",
  "crates/omena-cli",
  "crates/omena-napi",
  "crates/omena-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.14"
edition = "2024"
license = "MIT"
publish = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
salsa = { version = "0.26.1", default-features = false, features = ["macros", "inventory"] }
criterion = "0.8.2"
cstree = "0.14.0"
browserslist = { package = "oxc-browserslist", version = "3.0.2" }
egg = "0.11.0"
rustc-hash = "2.1.2"
smol_str = "0.3.6"
clap = { version = "4.6.1", features = ["derive"] }
napi = "3.8.6"
napi-derive = "3.5.5"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.121"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
