[workspace]
members = [
  "crates/engine-shadow-runner",
  "crates/engine-style-parser",
  "crates/omena-abstract-value",
  "crates/omena-benchmarks",
  "crates/omena-bridge",
  "crates/omena-cascade",
  "crates/omena-categorical",
  "crates/omena-checker",
  "crates/omena-cli",
  "crates/omena-diff-test",
  "crates/omena-engine-input-producers",
  "crates/omena-ensemble",
  "crates/omena-interner",
  "crates/omena-parser",
  "crates/omena-syntax",
  "crates/omena-testkit",
  "crates/omena-incremental",
  "crates/omena-lsp-server",
  "crates/omena-lawvere",
  "crates/omena-meta-macros",
  "crates/omena-napi",
  "crates/omena-query",
  "crates/omena-query-core",
  "crates/omena-query-checker-orchestrator",
  "crates/omena-query-transform-runner",
  "crates/omena-refinement",
  "crates/omena-refinement-trait",
  "crates/omena-rg-flow",
  "crates/omena-resolver",
  "crates/omena-semantic",
  "crates/omena-sif",
  "crates/omena-smt",
  "crates/omena-spec-audit",
  "crates/omena-streaming-ifds",
  "crates/omena-tsgo-client",
  "crates/omena-transform-bundle",
  "crates/omena-transform-cst",
  "crates/omena-transform-egg",
  "crates/omena-transform-passes",
  "crates/omena-transform-print",
  "crates/omena-transform-target",
  "crates/omena-umbrella",
  "crates/omena-variational",
  "crates/omena-wasm",
  "crates/omena-zk-audit",
  "crates/omena-zk-circuit",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
# MSRV (supported floor): the tree compiles on stable 1.93.x; rust-toolchain.toml
# pins 1.96.0 as the dev/CI toolchain (>= MSRV, normal). Members inherit via
# rust-version.workspace = true.
rust-version = "1.93"
# Model A direct-publish: members are publishable by default; the non-published
# set (4 [I] crates + the npm-only omena-napi) overrides with explicit publish =
# false. Enforced by check:rust-publish-flags (publish=false IFF [I] or napi).
publish = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
salsa = { version = "0.26.1", default-features = false, features = ["macros", "inventory"] }
clap = { version = "4.6.1", features = ["derive"] }
criterion = "0.8.2"
cstree = "0.14.0"
browserslist = { package = "oxc-browserslist", version = "3.0.2" }
egg = "0.11.0"
napi = "3.8.6"
napi-derive = "3.5.5"
rustc-hash = "2.1.2"
smol_str = "0.3.6"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.121"
blake3 = "1.8.5"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
