[workspace]
members = [
  "crates/engine-shadow-runner",
  "crates/engine-style-parser",
  "crates/omena-abstract-value",
  "crates/omena-benchmarks",
  "crates/omena-bundler",
  "crates/omena-bridge",
  "crates/omena-cascade",
  "crates/omena-cascade-proof",
  "crates/omena-cst-typed",
  "crates/omena-cross-file-summary",
  "crates/omena-categorical",
  "crates/omena-checker",
  "crates/omena-cli",
  "crates/omena-diff-test",
  "crates/omena-engine-input-producers",
  "crates/omena-ensemble",
  "crates/omena-evidence-graph",
  "crates/omena-interner",
  "crates/omena-parser",
  "crates/omena-product-hints",
  "crates/omena-syntax",
  "crates/omena-testkit",
  "crates/omena-incremental",
  "crates/omena-lsp-server",
  "crates/omena-lawvere",
  "crates/omena-meta-macros",
  "crates/omena-napi",
  "crates/omena-query",
  "crates/omena-query-core",
  "crates/omena-query-checker-orchestrator",
  "crates/omena-query-transform-runner",
  "crates/omena-reachability-datalog-lab",
  "crates/omena-refinement",
  "crates/omena-refinement-trait",
  "crates/omena-rg-flow",
  "crates/omena-resolver",
  "crates/omena-semantic",
  "crates/omena-sif",
  "crates/omena-scss-eval",
  "crates/omena-smt",
  "crates/omena-spec-audit",
  "crates/omena-streaming-ifds",
  "crates/omena-tsgo-client",
  "crates/omena-transform-bundle",
  "crates/omena-transform-cst",
  "crates/omena-transform-egg",
  "crates/omena-transform-passes",
  "crates/omena-transform-print",
  "crates/omena-transform-target",
  "crates/omena-umbrella",
  "crates/omena-value-lattice",
  "crates/omena-variational",
  "crates/omena-wasm",
  "crates/omena-zk-audit",
  "crates/omena-zk-circuit",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
# MSRV (supported floor): the tree compiles on stable 1.94.x (raised from 1.93 by
# the oxc 0.134 bump, which requires rustc 1.94). rust-toolchain.toml (repo root +
# rust/) pins 1.96.0 as the dev/CI toolchain (>= MSRV, normal). Members inherit via
# rust-version.workspace = true.
rust-version = "1.94"
# Model A direct-publish: members are publishable by default; the non-published
# set (4 [I] crates + the npm-only omena-napi) overrides with explicit publish =
# false. Enforced by check:rust-publish-flags (publish=false IFF [I] or napi).
publish = true

[workspace.dependencies]
ascent = { version = "0.8.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "1.1.2"
salsa = { version = "0.27.0", default-features = false, features = ["macros", "inventory"] }
# RFC 0009 Pillar F (rfcs#68): bounded parallel diagnostics waves in
# omena-lsp-server ONLY (already resolved in Cargo.lock transitively via
# criterion). Never enable salsa's own rayon feature, and never let rayon
# reach wasm/napi-consumed crates.
rayon = "1.12"
clap = { version = "4.6.1", features = ["derive"] }
criterion = "0.8.2"
cstree = "0.14.0"
browserslist = { package = "oxc-browserslist", version = "3.0.5" }
egg = "0.11.0"
iai-callgrind = "0.16.1"
napi = "3.9.2"
napi-derive = "3.5.6"
rustc-hash = "2.1.2"
smol_str = "0.3.6"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.125"
blake3 = "1.8.5"
proptest = "1.11.0"
sha2 = "0.11.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
