[package]
name = "omena-engine-input-producers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Rust input-derived producer artifacts for CSS Module Explainer EngineInputV2"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"
keywords = ["omena", "css", "parser", "analysis"]
categories = ["development-tools", "parser-implementations"]

[lib]
name = "engine_input_producers"

[lints]
workspace = true

[dependencies]
omena-abstract-value = { path = "../omena-abstract-value", version = "0.1" }
serde.workspace = true
serde_json.workspace = true
