[package]
name = "omena-abstract-value"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Abstract class value domain and selector projection contracts"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"
keywords = ["omena", "css", "parser", "analysis"]
categories = ["development-tools", "parser-implementations"]

[lints]
workspace = true

[dependencies]
omena-incremental = { path = "../omena-incremental", version = "0.1" }
serde.workspace = true
