[package]
name = "omena-cascade"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Cascade-formal substrate for Omena CSS"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"
keywords = ["omena", "css", "parser", "analysis"]
categories = ["development-tools", "parser-implementations"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
