[package]
name = "omena-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "CLI checker and transform runner for the Omena CSS workspace"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"
keywords = ["omena", "css", "parser", "analysis"]
categories = ["development-tools", "parser-implementations"]

[lints]
workspace = true

[dependencies]
clap.workspace = true
omena-query = { path = "../omena-query", version = "0.1" }
serde.workspace = true
serde_json.workspace = true
