[package]
name = "omena-incremental"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Salsa-style incremental invalidation primitives for Omena"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"
keywords = ["omena", "css", "parser", "analysis"]
categories = ["development-tools", "parser-implementations"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
salsa.workspace = true
