[package]
name = "omena-interner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Workspace-shared interned name identities for the Omena CSS parser stack"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"
keywords = ["omena", "css", "parser", "analysis"]
categories = ["development-tools", "parser-implementations"]

[lints]
workspace = true

[dependencies]
omena-syntax = { path = "../omena-syntax", version = "0.1.0" }
salsa.workspace = true
smol_str.workspace = true
