[package]
name = "omena-query"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Omena query boundary over CME producer query fragments"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"
keywords = ["omena", "css", "parser", "analysis"]
categories = ["development-tools", "parser-implementations"]

[lints]
workspace = true

[dependencies]
engine-input-producers = { package = "omena-engine-input-producers", path = "../engine-input-producers", version = "0.1" }
omena-abstract-value = { path = "../omena-abstract-value", version = "0.1" }
omena-bridge = { path = "../omena-bridge", version = "0.1" }
omena-incremental = { path = "../omena-incremental", version = "0.1" }
omena-parser = { path = "../omena-parser", version = "0.1" }
omena-resolver = { path = "../omena-resolver", version = "0.1" }
omena-transform-bundle = { path = "../omena-transform-bundle", version = "0.1" }
omena-transform-cst = { path = "../omena-transform-cst", version = "0.1" }
omena-transform-egg = { path = "../omena-transform-egg", version = "0.1" }
omena-transform-passes = { path = "../omena-transform-passes", version = "0.1" }
omena-transform-print = { path = "../omena-transform-print", version = "0.1" }
omena-transform-target = { path = "../omena-transform-target", version = "0.1" }
serde.workspace = true
serde_json.workspace = true
