[package]
name = "omena-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Omena resolver boundary over CME source-resolution producer contracts"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"
keywords = ["omena", "css", "parser", "analysis"]
categories = ["development-tools", "parser-implementations"]

[lints]
workspace = true

[dependencies]
engine-input-producers = { package = "omena-engine-input-producers", path = "../engine-input-producers", version = "0.1" }
serde.workspace = true
serde_json.workspace = true
