[package]
name = "omena-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "CSS-family syntax substrate for the Omena parser stack"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"
keywords = ["omena", "css", "parser", "analysis"]
categories = ["development-tools", "parser-implementations"]

[lints]
workspace = true

[dependencies]
cstree.workspace = true
