[package]
name = "omena-transform-passes"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Transform pass registry and DAG planner for Omena CSS"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"
keywords = ["omena", "css", "parser", "analysis"]
categories = ["development-tools", "parser-implementations"]

[lints]
workspace = true

[dependencies]
omena-cascade = { path = "../omena-cascade", version = "0.1" }
omena-incremental = { path = "../omena-incremental", version = "0.1" }
omena-transform-cst = { path = "../omena-transform-cst", version = "0.1" }
omena-parser = { path = "../omena-parser", version = "0.1" }
omena-syntax = { path = "../omena-syntax", version = "0.1" }
serde.workspace = true
serde_json.workspace = true
