[package]
name = "engine-input-producers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Rust input-derived producer artifacts for Omena CSS Modules EngineInputV2"
repository = "https://github.com/yongsk0066/css-module-explainer"
readme = "README.md"

[package.metadata.omena]
role = "R1"

[lints]
workspace = true

[dependencies]
omena-abstract-value = { path = "../omena-abstract-value" }
serde.workspace = true
serde_json.workspace = true
