[package]
name = "engine-shadow-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[package.metadata.omena]
role = "I"

[lints]
workspace = true

[dependencies]
omena-engine-input-producers = { path = "../omena-engine-input-producers" }
omena-abstract-value = { path = "../omena-abstract-value" }
omena-checker = { path = "../omena-checker" }
omena-cascade = { path = "../omena-cascade" }
omena-ensemble = { path = "../omena-ensemble", features = ["replica-ensemble"] }
omena-query = { path = "../omena-query" }
omena-resolver = { path = "../omena-resolver" }
omena-streaming-ifds = { path = "../omena-streaming-ifds" }
serde.workspace = true
serde_json.workspace = true
