[package]
name = "engine-shadow-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[package.metadata.omena]
role = "I"

[lints]
workspace = true

[dependencies]
omena-engine-input-producers = { path = "../omena-engine-input-producers", version = "=0.2.0" }
omena-abstract-value = { path = "../omena-abstract-value", version = "=0.2.0" }
omena-checker = { path = "../omena-checker", version = "=0.2.0" }
omena-cascade = { path = "../omena-cascade", version = "=0.2.0" }
omena-ensemble = { path = "../omena-ensemble", version = "=0.2.0", features = ["replica-ensemble"] }
omena-query = { path = "../omena-query", version = "=0.2.0" }
omena-resolver = { path = "../omena-resolver", version = "=0.2.0" }
omena-streaming-ifds = { path = "../omena-streaming-ifds", version = "=0.2.0" }
serde.workspace = true
serde_json.workspace = true
