[package]
name = "omena-abstract-value"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Abstract class value domain and selector projection contracts"
repository = "https://github.com/yongsk0066/css-module-explainer"
readme = "README.md"

[package.metadata.omena]
role = "R1"

[lints]
workspace = true

[features]
default = []

[dependencies]
omena-incremental = { path = "../omena-incremental" }
serde.workspace = true
