[package]
name = "omena-abstract-value"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Abstract class value domain and selector projection contracts"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"

[package.metadata.omena]
role = "R1"

[lints]
workspace = true

[features]
default = []

[dependencies]
omena-evidence-graph = { path = "../omena-evidence-graph", version = "=0.3.0" }
omena-incremental = { path = "../omena-incremental", version = "=0.3.0" }
omena-spec-audit = { path = "../omena-spec-audit", version = "=0.3.0" }
omena-value-lattice = { path = "../omena-value-lattice", version = "=0.3.0" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
