[package]
name = "omena-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Benchmark harnesses for Omena CSS Modules Rust crates"
repository = "https://github.com/omenien/omena-css"

[package.metadata.omena]
role = "I"

[lints]
workspace = true

[dependencies]
engine-style-parser = { path = "../engine-style-parser" }
omena-abstract-value = { path = "../omena-abstract-value" }
omena-parser = { path = "../omena-parser" }
omena-semantic = { path = "../omena-semantic" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "z5_performance_baseline"
harness = false
