[package]
name = "omena-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "CME-coupled bridge crate for Omena semantic graph inputs"
repository = "https://github.com/yongsk0066/css-module-explainer"
readme = "README.md"

[package.metadata.omena]
role = "R2"

[lints]
workspace = true

[dependencies]
engine-input-producers = { path = "../engine-input-producers" }
omena-parser = { path = "../omena-parser" }
omena-resolver = { path = "../omena-resolver" }
omena-semantic = { path = "../omena-semantic" }
omena-sif = { path = "../omena-sif" }
oxc_allocator = "0.128.0"
oxc_ast = "0.128.0"
oxc_parser = "0.128.0"
oxc_span = "0.128.0"
serde.workspace = true
serde_json.workspace = true
