[package]
name = "omena-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "CME-coupled bridge crate for Omena semantic graph inputs"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"

[package.metadata.omena]
role = "R2"

[lints]
workspace = true

[dependencies]
omena-engine-input-producers = { path = "../omena-engine-input-producers" }
omena-parser = { path = "../omena-parser" }
omena-resolver = { path = "../omena-resolver" }
omena-semantic = { path = "../omena-semantic" }
omena-sif = { path = "../omena-sif" }
oxc_allocator = "0.128.0"
oxc_ast = "0.128.0"
oxc_parser = "0.128.0"
oxc_span = "0.128.0"
serde.workspace = true
serde_json.workspace = true
