[package]
name = "omena-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "CME-coupled bridge crate for Omena semantic graph inputs"
repository = "https://github.com/omenien/omena-css"
readme = "README.md"

[package.metadata.omena]
role = "R2"

[lints]
workspace = true

[dependencies]
omena-engine-input-producers = { path = "../omena-engine-input-producers", version = "=0.2.1" }
omena-parser = { path = "../omena-parser", version = "=0.2.1" }
omena-resolver = { path = "../omena-resolver", version = "=0.2.1" }
omena-semantic = { path = "../omena-semantic", version = "=0.2.1" }
omena-sif = { path = "../omena-sif", version = "=0.2.1" }
oxc_allocator = "0.136.0"
oxc_ast = "0.136.0"
oxc_parser = "0.136.0"
oxc_span = "0.136.0"
serde.workspace = true
serde_json.workspace = true
